feat: consistent naming 'company' to 'organization'
